Move everything under the space.matterandvoid.malli-gen package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Malli Code Gen",
+  "name": "space.matterandvoid.malli-code-gen",
   "version": "1.0.0",
   "license": "MIT",
   "devDependencies": {
