tests : disable custom-registry-flag in github scripts and the eql-pull-test

--- a/.github/workflows/test_on_push.yml
+++ b/.github/workflows/test_on_push.yml
@@ -29,5 +29,6 @@ jobs:
         with: { cli: 1.10.3.822 }
 
       - name: Execute tests
-        run: clojure -M:custom-malli-registry:dev:test:run-tests
+        #run: clojure -M:custom-malli-registry:dev:test:run-tests
+        run: clojure -M:dev:test:run-tests
         shell: bash
